--- a/app/templates/studentform.html
+++ b/app/templates/studentform.html
@@ -16,7 +16,7 @@
     <link href="/static/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 
     <!-- Custom styles for this template -->
-    <link href="/static/css/cover.css" rel="stylesheet">
+    <link href="/static/cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -46,7 +46,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><img src=/Users/gracenbrilz/Documents/HacktheHearst/dist/Hearstlogo.png><a href="http://hearstmuseum.berkeley.edu/">  PHOEBE A. HEARST MUSEUM OF ANTHROPOLOGY</a></h3>
+              <h3 class="masthead-brand"><img src='static/LandingImages/Hearstlogo.png'><a href="http://hearstmuseum.berkeley.edu/">  PHOEBE A. HEARST MUSEUM OF ANTHROPOLOGY</a></h3>
 
             </div>
           </div>
@@ -59,7 +59,7 @@
               <form role="form" method="post">
                 <div class="form-group">
                   
-                  <input type="text" id="classname" name=classname placeholder="Enter class name">
+                  <input type="text" class="form-control" id="classname" name=classname placeholder="Enter class name">
                 </div>
                 <div class="form-group">
                   
