--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -48,6 +48,7 @@
 				            	<span class="glyphicon glyphicon-briefcase"></span>&nbsp;&nbsp;My Satchel
 				            </a>
 				        </li>
+				        <li><a href="/logout" class="logout">Log Out</a></li>
 	          		</ul>
 	        	</div>
 	      	</div>
