--- a/app/templates/choosename.html
+++ b/app/templates/choosename.html
@@ -7,8 +7,8 @@
 		<!-- Bootstrap CSS -->
 		<link href="css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
 		<!-- Custom CSS -->
-		<link href="css/homepage.css" type="text/css" rel="stylesheet"/>
-		<link href="css/bytribe.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/homepage.css" type="text/css" rel="stylesheet"/>
+		<link href="/static/css/bytribe.css" type="text/css" rel="stylesheet"/>
 		<!-- Google Fonts: Open Sans -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,700,400' rel='stylesheet' type='text/css'>
 		<!-- Bootstrap JS -->
