--- a/app/templates/choosename.html
+++ b/app/templates/choosename.html
@@ -36,7 +36,7 @@
 		            	<span class="icon-bar"></span>
 		            	<span class="icon-bar"></span>
 	          		</button>
-	          		<a class="navbar-brand" href="#">YAPI KAPI</a>
+	          		<a class="navbar-brand" href="#"><img src="/static/LandingImages/YAPIKAPI_nav_logo.png"></a>
 	        	</div>
 	        	<div class="navbar-collapse collapse">
 	          		
